app-express-otel-kubernetes/k8s-teste/test-0004/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app-desafio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: brunosantos88/otel-app-backend:v1114
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app-desafio
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
